tests/snapshots/ci_junit_golden__junit_custom_suite_name.snap
---
source: tests/ci_junit_golden.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?><testsuites name="my-custom-suite" tests="1" failures="1" errors="0" skipped="0"><testsuite name="my-custom-suite" tests="1" failures="1" errors="0" skipped="0"><testcase name="Test finding" classname="raff.statement-count"><failure message="Test finding"></failure></testcase></testsuite></testsuites>
