tests/snapshots/ci_junit_golden__junit_finding_with_line_range.snap
---
source: tests/ci_junit_golden.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?><testsuites name="raff-test-suite" tests="1" failures="0" errors="0" skipped="0"><testsuite name="raff-test-suite" tests="1" failures="0" errors="0" skipped="0"><testcase name="Function &apos;process_data&apos; has high cyclomatic complexity: 15 (threshold: 10)" classname="raff.rust-code-analysis"/></testsuite></testsuites>
