tests/snapshots/ci_junit_golden__junit_finding_with_special_characters.snap
---
source: tests/ci_junit_golden.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?><testsuites name="raff-test-suite" tests="1" failures="1" errors="0" skipped="0"><testsuite name="raff-test-suite" tests="1" failures="1" errors="0" skipped="0"><testcase name="Component &apos;src/utils/helpers&apos; has 1000 statements (10%), exceeding threshold of 5%" classname="raff.statement-count"><failure message="src/utils/helpers.rs: Component &apos;src/utils/helpers&apos; has 1000 statements (10%), exceeding threshold of 5%">
Help: https://github.com/liamwh/raff#statement-count
</failure></testcase></testsuite></testsuites>
