tests/snapshots/ci_junit_golden__junit_long_message_truncation.snap
---
source: tests/ci_junit_golden.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?><testsuites name="raff-test-suite" tests="1" failures="1" errors="0" skipped="0"><testsuite name="raff-test-suite" tests="1" failures="1" errors="0" skipped="0"><testcase name="This is a very long message that should be truncated because it exceeds the maximum testcase name length that JUnit parsers can handle reliably. This is a very long message that should be truncated..." classname="raff.test-rule"><failure message="This is a very long message that should be truncated because it exceeds the maximum testcase name length that JUnit parsers can handle reliably. This is a very long message that should be truncated because it exceeds the maximum testcase name length that JUnit parsers can handle reliably. This is a very long message that should be truncated because it exceeds the maximum testcase name length that JUnit parsers can handle reliably. This is a very long message that should be truncated because it exceeds the maximum testcase name length that JUnit parsers can handle reliably. This is a very long message that should be truncated because it exceeds the maximum testcase name length that JUnit parsers can handle reliably. This is a very long message that should be truncated because it exceeds the maximum testcase name length that JUnit parsers can handle reliably. This is a very long message that should be truncated because it exceeds the maximum testcase name length that JUnit parsers can handle reliably. This is a very long message that should be truncated because it exceeds the maximum testcase name length that JUnit parsers can handle reliably. This is a very long message that should be truncated because it exceeds the maximum testcase name length that JUnit parsers can handle reliably. This is a very long message that should be truncated because it exceeds the maximum testcase name length that JUnit parsers can handle reliably. "></failure></testcase></testsuite></testsuites>
