tests/snapshots/ci_junit_golden__junit_note_finding.snap
---
source: tests/ci_junit_golden.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?><testsuites name="raff-test-suite" tests="1" failures="0" errors="0" skipped="0"><testsuite name="raff-test-suite" tests="1" failures="0" errors="0" skipped="0"><testcase name="File &apos;src/lib.rs&apos; metrics: SLOC=150, Cyclomatic Avg=2.5, Halstead Volume=4500" classname="raff.rust-code-analysis"/></testsuite></testsuites>
